--- a/chatapp-js-desktop/package.json
+++ b/chatapp-js-desktop/package.json
@@ -15,7 +15,8 @@
     "mobx": "^6.10.0",
     "mobx-react": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
