--- a/chatapp-js-desktop/package.json
+++ b/chatapp-js-desktop/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
+    "github-markdown-css": "^5.2.0",
     "langchain": "^0.0.131",
     "mobx": "^6.10.0",
     "mobx-react": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.4.0",
